--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,7 +3,8 @@
 # Footer
 --------------------------------------------------------------*/
 .footer {
-  padding: 4.5rem 0 2.5rem 0;
+  padding: 3.5rem 0 2.5rem 0;
+  padding-top: 50px;
   background: rgb(241, 241, 241);
 }
 
