--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -59,3 +59,35 @@
 .social a i {
   line-height: 0;
 }
+
+.btn-flotante {
+	font-size: 10px; /* Cambiar el tamaño de la tipografia */
+	font-weight: bold; /* Fuente en negrita o bold */
+	color: #023a00; /* Color del texto */
+	border-radius: 55px; /* Borde del boton */
+	background-color: #0c920000; /* Color de fondo */
+	padding: 10px 10px; /* Relleno del boton */
+	position: fixed;
+	bottom: 20px;
+	left: 10px;
+	transition: all 300ms ease 0ms;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.589);
+	z-index: 9;
+}
+.btn-flotante:hover {
+	background-color: #00ff6a; /* Color de fondo al pasar el cursor */
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+	transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+ 	.btn-flotante {
+		font-size: 14px;
+		padding: 12px 20px;
+		bottom: 20px;
+		right: 20px;
+	}
+} 
+.wpp{
+  height: 35px;
+  
+}
