--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -75,12 +75,12 @@
 	z-index: 9;
 }
 .btn-flotante:hover {
-	background-color: #00ff6a; /* Color de fondo al pasar el cursor */
+	background-color: #00a545; /* Color de fondo al pasar el cursor */
 	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
 	transform: translateY(-7px);
 }
 @media only screen and (max-width: 600px) {
- 	.btn-flotante {
+.btn-flotante {
 		font-size: 14px;
 		padding: 12px 20px;
 		bottom: 20px;
@@ -90,4 +90,29 @@
 .wpp{
   height: 35px;
   
+}
+
+
+
+
+
+
+
+.btn-flotante1 {
+	position: fixed;
+	bottom: -4%;
+	left: 5%;
+	z-index: 1;
+}
+@media only screen and (max-width: 600px) {
+  .btn-flotante1 {
+		padding: 12px 20px;
+		bottom: 20px;
+		right: 20px;
+	}
+  
+} 
+.wpp1{
+  height: 605px;
+  opacity: 0.1;
 }
