--- a/public/css/style.css
+++ b/public/css/style.css
@@ -822,7 +822,7 @@ section {
 # Hero Section
 --------------------------------------------------------------*/
 .hero-section {
-  background: linear-gradient(to right, rgba(0, 35, 104, 0.8) 0%, rgba(0, 119, 199, 0.61) 100%), url(../img/Logo\ HD.fw.png) 10% 30%/44% no-repeat ;
+  background: linear-gradient(to right, rgba(0, 35, 104, 0.8) 0%, rgba(0, 119, 199, 0.9) 100%), url(../img/Logo\ HD.fw.png) 10% 30%/44% no-repeat/*, url(../img/Sin\ título-1.png)10% 50%/110% no-repeat */;
   position: relative;
 }
 
@@ -862,7 +862,7 @@ section {
 }
 @media screen and (max-width: 992px) {
   .hero-section {
-    background: linear-gradient(to right, rgba(0, 35, 104, 0.8) 0%, rgba(0, 80, 69, 0.61) 100%), url(../img/Logo\ HD.fw.png) 40% 30%/80% no-repeat ;
+    background: linear-gradient(to right, rgba(0, 35, 104, 0.9) 0%, rgba(0, 80, 69, 0.61) 100%), url(../img/Logo\ HD.fw.png) 40% 30%/60% no-repeat,url(../img/Sin\ título-1.png)40% 20%/300% no-repeat ;
 
   }
 }
@@ -1371,71 +1371,7 @@ section {
 .portfolio .portfolio-wrap:hover .portfolio-info {
   opacity: 1;
 }
-
---------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------
-.portfolio-details {
-  padding-top: 20px;
-}
-
-.portfolio-details .portfolio-details-slider img {
-  width: 80%;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination {
-  margin-top: 20px;
-  position: relative;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: #fff;
-  opacity: 1;
-  border: 1px solid #004175;
-}
-
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #003a69;
-}
-
-.portfolio-details .portfolio-info {
-  padding: 30px;
-  box-shadow: 0px 0 20px rgba(17, 17, 17, 0.459);
-}
-
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #eee;
-}
-
-.portfolio-details .portfolio-info ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-}
-
-.portfolio-details .portfolio-info ul li+li {
-  margin-top: 10px;
-}
-
-.portfolio-details .portfolio-description {
-  padding-top: 30px;
-}
-
-.portfolio-details .portfolio-description h2 {
-  font-size: 26px;
-  font-weight: 700;
-  margin-bottom: 20px;
-}
-
-.portfolio-details .portfolio-description p {
-  padding: 0;
-} */
+*/
 
 /*--------------------------------------------------------------
 # Call To Action Section
@@ -1461,6 +1397,7 @@ section {
   color: #1c2225;
   font-size: 38px;
   font-weight: 700;
+  
 }
 
 .cta1 .content h3 em {
