--- a/public/css/portofolio.css
+++ b/public/css/portofolio.css
@@ -219,4 +219,162 @@
 
 .portfolio-details .portfolio-description p {
   padding: 0;
-} 
+}
+
+
+/*--------------------------------------------------------------
+# Services1
+--------------------------------------------------------------*/
+/* .services1 .icon-box {
+  text-align: center;
+  padding: 40px 20px;
+  transition: all ease-in-out 0.1s;
+  background: #fff;
+}
+
+.services1 .icon-box .icon {
+  margin: 0 auto;
+  width: 64px;
+  height: 64px;
+  border-radius: 50px;
+  border: 1px solid #009970;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  transition: ease-in-out 0.1s;
+  color: #009970;
+}
+
+.services1 .icon-box .icon i {
+  font-size: 28px;
+}
+
+.services1 .icon-box h4 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.services1 .icon-box h4 a {
+  color: #36343a;
+  transition: ease-in-out 0.1s;
+}
+
+.services1 .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.services1 .icon-box:hover {
+  border-color: #fff;
+  box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
+}
+
+.services1 .icon-box:hover h4 a {
+  color: #009970;
+}
+
+.services1 .icon-box:hover .icon {
+  color: #fff;
+  background: #009970;
+} */
+
+/*--------------------------------------------------------------
+# cursos
+--------------------------------------------------------------*/
+.cursos {
+  background: #fff;
+}
+
+.cursos .member {
+  position: relative;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.096);
+  padding: 25px;
+  border-radius: 20px;
+  margin-bottom: 15px;
+  
+}
+
+
+.cursos .member .member-img {
+  position: relative;
+  overflow: hidden;
+  transition: ease-in-out 0.3s;
+}
+
+
+.cursos .member:hover img {
+  transform: scale(1.1);
+}
+
+.cursos .member .member-info {
+  padding-left: 15px;
+}
+
+.cursos .member h4 {
+  font-weight: 700;
+  margin-bottom: 8px;
+  font-size: 18px;
+  color: #2c4964;
+}
+
+.cursos .member span {
+  display: block;
+  font-size: 15px;
+  padding-bottom: 4px;
+  position: relative;
+  font-weight: 500;
+}
+
+.cursos .member span::after {
+  content: "";
+  position: static;
+  display: block;
+  width: 25%;
+  height: 1px;
+  background: #b2c8dd;
+  bottom: -2px;
+  left: 0;
+}
+
+.cursos .member p {
+  margin: 1px 10px 20px 0;
+  font-size: 14px;
+text-align:justify ;
+}
+
+.cursos .member .social {
+  margin-top: 12px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.cursos .member .social a {
+  transition: ease-in-out 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  width: 32px;
+  height: 32px;
+  background: #0b83ecdc;
+}
+
+.cursos .member .social a i {
+  color: #fff;
+  font-size: 16px;
+  margin: 0 2px;
+}
+
+.cursos .member .social a:hover {
+  background: #002f58;
+}
+
+.cursos .member .social a+a {
+  margin-left: 15px;
+}
+
