--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ html {
 
 } */
 
+
 body {
   font-family: "Roboto", sans-serif;
   color: #7c7c7c;
@@ -20,6 +21,7 @@ a {
   color: rgb(3, 0, 49);
   text-decoration: none;
   transition: 0.3s all ease;
+  text-align: justify;
 }
 
 a:hover {
@@ -39,6 +41,13 @@ h6,
 .container {
   z-index: 2;
   position: relative;
+  text-align: justify;
+}
+p{
+  text-align: justify;
+}
+#h4:hover{
+color: #00ffff;
 }
 
 .text-black {
@@ -57,7 +66,7 @@ h6,
   border-bottom: 1px solid #001653 !important;
 }
 
-figure figcaption {
+ figure figcaption {
   margin-top: 0.5rem;
   font-style: italic;
   font-size: 0.8rem;
@@ -113,7 +122,7 @@ section {
   opacity: 1;
 }
 
-/* Default btn sre-tyling */
+/* BOTON  */
 .btn {
   border: none;
   padding: 15px 30px !important;
@@ -126,61 +135,25 @@ section {
 }
 
 .btn.btn-outline-white:hover {
-  background: #fff;
+  background: rgb(255, 255, 255);
   color: #2d71a1;
 }
 
 .btn.btn-primary {
-  background: #2d71a1;
+  background: #0095ff;
   background: linear-gradient(-45deg, #1391a5, #274685);
   color: #fff;
   box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.15);
 }
 
-
-
-
-
-/* Feature 1 */
-.feature-1 .wrap-icon {
-  margin: 0 auto;
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
-  position: relative;
-  margin-bottom: 30px;
-  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.2);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.feature-1 .wrap-icon.icon-1 {
-  background: linear-gradient(-45deg, #3b87bd, #2d71a2);
-}
-
-.feature-1 .wrap-icon i {
-  font-size: 40px;
-  line-height: 0;
-  color: #fff;
-}
-
-.feature-1 h3 {
-  font-size: 20px;
-}
-
-.feature-1 p {
-  color: #b1b1b1;
-}
-
-/* Step */
-.step {
+/*Parte del complejo "NUESTRO COMPLEJO"  */
+.complejo {
   box-shadow: 0 10px 30px -5px rgba(0, 0, 0, 0.486);
   background: rgb(255, 255, 255);
   padding: 40px;
 }
 
-.step .number {
+.complejo .number {
   background: linear-gradient(-45deg, #1391a5, #274685);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -190,73 +163,9 @@ section {
   display: block;
 }
 
-.step p:last-child {
+.complejo p:last-child {
   margin-bottom: 0px;
 }
-/*--------------------------------------------------------------
-# Departments
---------------------------------------------------------------*/
-.departments {
-  overflow: hidden;
-}
-
-.departments .nav-tabs {
-  border: 0;
-}
-
-.departments .nav-link {
-  border: 0;
-  padding: 12px 15px 12px 0;
-  transition: 0.3s;
-  color: #003e77;
-  border-radius: 0;
-  border-right: 2px solid #ebf1f6;
-  font-weight: 600;
-  font-size: 15px;
-}
-
-.departments .nav-link:hover {
-  color: #0088ff;
-}
-
-.departments .nav-link.active {
-  color: #0088ff;
-  border-color: #1977cc;
-}
-
-.departments .tab-pane.active {
-  -webkit-animation: fadeIn 0.5s ease-out;
-  animation: fadeIn 0.5s ease-out;
-}
-
-.departments .details h3 {
-  font-size: 26px;
-  font-weight: 600;
-  margin-bottom: 20px;
-  color: #2c4964;
-}
-
-.departments .details p {
-  color: #020736;
-}
-
-.departments .details p:last-child {
-  margin-bottom: 0;
-}
-
-@media (max-width: 992px) {
-  .departments .nav-link {
-    border: 0;
-    padding: 15px;
-  }
-  
-
-  .departments .nav-link.active {
-    color: #fff;
-    background: #1977cc;
-  }
-}
-
 /* Review */
 .review h3 {
   font-size: 20px;
@@ -281,6 +190,74 @@ section {
   margin: 0 auto;
 }
 
+
+
+/*--------------------------------------------------------------
+# equiposADA "ASOCIACION DEPORTIVA DE AUDITORES A.D.A.
+--------------------------------------------------------------*/
+.equiposADA {
+  overflow: hidden;
+}
+
+.equiposADA .nav-tabs {
+  border: 0;
+}
+
+.equiposADA .nav-link {
+  border: 0;
+  padding: 12px 15px 12px 0;
+  transition: 0.3s;
+  color: #003e77;
+  border-radius: 0;
+  border-right: 2px solid #ebf1f6;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.equiposADA .nav-link:hover {
+  color: #0088ff;
+}
+
+.equiposADA .nav-link.active {
+  color: #0088ff;
+  border-color: #1977cc;
+}
+
+.equiposADA .tab-pane.active {
+  -webkit-animation: fadeIn 0.5s ease-out;
+  animation: fadeIn 0.5s ease-out;
+}
+
+.equiposADA .details h3 {
+  font-size: 26px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #2c4964;
+}
+
+.equiposADA .details p {
+  color: #020736;
+}
+
+.equiposADA .details p:last-child {
+  margin-bottom: 0;
+}
+
+@media (max-width: 992px) {
+  .equiposADA .nav-link {
+    border: 0;
+    padding: 15px;
+  }
+  
+
+  .equiposADA .nav-link.active {
+    color: #fff;
+    background: #1977cc;
+  }
+}
+
+
+
 /* Testimonial Carousel */
 .testimonials-slider .swiper-pagination {
   margin-top: 20px;
@@ -297,6 +274,9 @@ section {
 
 .testimonials-slider .swiper-pagination .swiper-pagination-bullet-active {
   background-color: #2d71a1;
+}
+.testimonials-slider p{
+text-align: center;
 }
 
 /* Pricing */
