--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1552,9 +1552,9 @@ text-align: center;
   position: absolute;
   left: 50%;
   top: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to right, rgba(0, 61, 117, 0.8), rgba(0, 11, 59, 0.76)), url("../img/hero-bg.jpg") center top no-repeat;
+  width: 130%;
+  height: 95%;
+  background: linear-gradient(to right, rgba(0, 61, 117, 0.8), rgba(23, 33, 78, 0.6)), url(../img/skyscraper-3122210_1920.jpg)center top no-repeat;
   z-index: 0;
   /* border-radius: 0 0 50% 50%; */
   transform: translateX(-50%) rotate(0deg);
@@ -1565,7 +1565,7 @@ text-align: center;
   position: absolute;
   left: 50%;
   top: 0;
-  width: 100%;
+  width: 130%;
   height: 96%;
   background: #40680c;
   opacity: 0.3;
