--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1481,8 +1481,9 @@ text-align: center;
 
 .curso1-details .cursos1-img {
   margin-bottom: 30px;
-  width: 90%;
-  height: 40%;
+  width: 70%;
+  height: 50%;
+  padding-left: 20%;
 }
 .curso1-details h3 {
   font-size: 28px;
@@ -1554,7 +1555,7 @@ text-align: center;
   top: 0;
   width: 130%;
   height: 95%;
-  background: linear-gradient(to right, rgba(0, 61, 117, 0.8), rgba(23, 33, 78, 0.6)), url(../img/libros/123.png)center top no-repeat;
+  background: linear-gradient(to right, rgba(21, 195, 226, 0), rgba(0, 26, 27, 0)), url(../img/libros/1231.png) center top no-repeat;
   z-index: 0;
   /* border-radius: 0 0 50% 50%; */
   transform: translateX(-50%) rotate(0deg);
@@ -1567,7 +1568,7 @@ text-align: center;
   top: 0;
   width: 130%;
   height: 96%;
-  background: #40680c;
+  background: #70836fe0;
   opacity: 0.3;
   z-index: 0;
   /* border-radius: 0 0 50% 50%; */
