--- a/public/css/portofolio.css
+++ b/public/css/portofolio.css
@@ -569,3 +569,168 @@ text-align:justify ;
     margin-top: 10px;
   }
 }
+
+
+
+/* NOTIIICIIIAAAS */
+
+
+
+
+
+
+
+
+
+/* Portfolio Section
+--------------------------------*/
+#noticias {
+  padding: 60px 0;
+}
+
+#noticias #noticias-flters {
+  padding: 0;
+  margin: 5px 0 35px 0;
+  list-style: none;
+  text-align: center;
+}
+
+#noticias #noticias-flters li {
+  cursor: pointer;
+  margin: 15px 15px 15px 0;
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 12px;
+  line-height: 20px;
+  color: #666666;
+  border-radius: 4px;
+  text-transform: uppercase;
+  background: #fff;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+#noticias #noticias-flters li:hover,
+#noticias #noticias-flters li.filter-active {
+  background: #18d26e;
+  color: #fff;
+}
+
+#noticias #noticias-flters li:last-child {
+  margin-right: 0;
+}
+
+#noticias .noticias-wrap {
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  transition: 0.3s;
+}
+
+#noticias .noticias-wrap:hover {
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.16);
+}
+
+#noticias .noticias-item {
+  position: relative;
+  height: 360px;
+  overflow: hidden;
+}
+
+#noticias .noticias-item figure {
+  background: #000;
+  overflow: hidden;
+  height: 240px;
+  position: relative;
+  border-radius: 4px 4px 0 0;
+  margin: 0;
+}
+
+#noticias .noticias-item figure:hover img {
+  opacity: 0.4;
+  transition: 0.3s;
+}
+
+#noticias .noticias-item figure .link-preview,
+#noticias .noticias-item figure .link-details {
+  position: absolute;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  line-height: 1;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  background: #fff;
+  border-radius: 50%;
+  transition: 0.2s linear;
+}
+
+#noticias .noticias-item figure .link-preview i,
+#noticias .noticias-item figure .link-details i {
+  font-size: 22px;
+  color: #333;
+  line-height: 0;
+}
+
+#noticias .noticias-item figure .link-preview:hover,
+#noticias .noticias-item figure .link-details:hover {
+  background: #18d26e;
+}
+
+#noticias .noticias-item figure .link-preview:hover i,
+#noticias .noticias-item figure .link-details:hover i {
+  color: #fff;
+}
+
+#noticias .noticias-item figure .link-preview {
+  left: calc(50% - 38px);
+  top: calc(50% - 18px);
+}
+
+#noticias .noticias-item figure .link-details {
+  right: calc(50% - 38px);
+  top: calc(50% - 18px);
+}
+
+#noticias .noticias-item figure:hover .link-preview {
+  opacity: 1;
+  left: calc(50% - 44px);
+}
+
+#noticias .noticias-item figure:hover .link-details {
+  opacity: 1;
+  right: calc(50% - 44px);
+}
+
+#noticias .noticias-item .noticias-info {
+  background: #fff;
+  text-align: center;
+  padding: 30px;
+  height: 90px;
+  border-radius: 0 0 3px 3px;
+}
+
+#noticias .noticias-item .noticias-info h4 {
+  font-size: 18px;
+  line-height: 1px;
+  font-weight: 700;
+  margin-bottom: 18px;
+  padding-bottom: 0;
+}
+
+#noticias .noticias-item .noticias-info h4 a {
+  color: #333;
+}
+
+#noticias .noticias-item .noticias-info h4 a:hover {
+  color: #18d26e;
+}
+
+#noticias .noticias-item .noticias-info p {
+  padding: 0;
+  margin: 0;
+  color: #b8b8b8;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+}
