--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,9 +41,8 @@ h6,
 .container {
   z-index: 2;
   position: relative;
-
-  max-width: 1320px;
   text-align: justify;
+  max-width: 1250px;
 }
 p{
   text-align: justify;
@@ -1311,7 +1310,7 @@ text-align: center;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  color: var(--color-white);
+  color:#fff;
   font-size: 28px;
   transition: ease-in-out 0.3s;
   position: absolute;
@@ -1557,7 +1556,7 @@ text-align: center;
   top: 0;
   width: 100%;
   height: 95%;
-  background: linear-gradient(to right, rgba(21, 195, 226, 0), rgba(0, 26, 27, 0)), url(../img/Index/Inicio3.png)  center top no-repeat;
+  background: linear-gradient(to right, rgba(0, 104, 122, 0.247), rgba(0, 26, 27, 0)), url(../img/Index/Inicio3.png)  center top no-repeat;
   z-index: 0;
   /* border-radius: 0 0 50% 50%; */
   transform: translateX(-50%) rotate(0deg);
